--- a/progress-bubble.css
+++ b/progress-bubble.css
@@ -3,13 +3,11 @@
     width: 100px;
     height: 100px;
     margin: 10px;
-    text-align: center;
     position: relative;
     background: radial-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.2));
     border-radius: 50%;
     font-size: 24px;
     text-shadow: 0 2px 2px rgba(0, 0, 0, 0.8);
-    vertical-align: middle;
     color: #fff;
 }
 
@@ -25,12 +23,16 @@
 }
 
 #content {
-    max-width: 90%;
-    overflow: hidden;
-    display: inline-block;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
+    width: 100%;
+    height: 100%;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    -webkit-align-items: center;
+    align-items: center;
+    -webkit-justify-content: center;
+    justify-content: center;
 }
 
 svg {
